failing test for travis

--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "main": "server.js",
   "repository": "",
   "author": "",
+  "scripts": {
+    "test": "./node_modules/jshint/bin/jshint hello.js"
+  },
   "dependencies": {
     "async": "~0.2.8",
     "express": "~3.2.4",
     "socket.io": "~0.9.14"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.4"
   }
 }
