added something. And stuff.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.4",
-    "mocha": "^3.3.0"
+    "mocha": "^3.3.0",
+    "mockgoose": "^7.3.1"
   }
 }
